--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "angular-env",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
+  "author": "Dražen Buljovčić <drazen.buljovcic@gmail.com>",
+  "private": true,
   "scripts": {
     "postinstall": "webdriver-manager update",
     "start": "npm run build:prod && http-server dist/ -p 3000",
     "build:prod": "BUILD=true NODE_ENV=production webpack -p --progress --colors --display-error-details",
-    "start:dev": "NODE_ENV=development webpack-dev-server --hot --inline",
+    "start:dev": "NODE_ENV=development webpack-dev-server --hot --inline --progress --colors",
     "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
     "test": "NODE_ENV=testing_unit karma start",
     "e2e": "NODE_ENV=testing_e2e protractor"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -37,6 +38,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "jasmine-core": "~2.5.2",
@@ -51,6 +53,9 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "protractor": "~5.1.0",
+    "pug": "^2.0.0-rc.1",
+    "pug-loader": "^2.3.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.0",
     "ts-loader": "^2.1.0",
