--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "scripts": {
     "postinstall": "webdriver-manager update",
-    "start": "npm run build:prod && http-server dist/ -p 3000",
+    "start": "npm run build:prod && npm run server",
+    "server": "NODE_ENV=production node server/server.js -p",
     "build:prod": "BUILD=true NODE_ENV=production webpack -p --progress --colors --display-error-details",
-    "start:dev": "NODE_ENV=development webpack-dev-server --progress --colors",
+    "dev": "NODE_ENV=development webpack-dev-server --progress --colors",
     "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
     "test": "NODE_ENV=testing_unit karma start",
@@ -23,7 +24,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "compression": "^1.6.2",
     "core-js": "^2.4.1",
+    "express": "^4.15.3",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
