--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postinstall": "webdriver-manager update",
     "start": "npm run build:prod && npm run server",
-    "server": "NODE_ENV=production node server/server.js -p",
+    "server": "NODE_ENV=production node server/server.js",
     "build:prod": "BUILD=true NODE_ENV=production webpack -p --progress --colors --display-error-details",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors",
     "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
