--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "~2.2.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
