--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^7.1.1",
     "clean-webpack-plugin": "^0.1.16",
     "codelyzer": "~2.0.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
@@ -55,6 +56,7 @@
     "karma-webpack": "^2.0.3",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
+    "preload-webpack-plugin": "^1.2.2",
     "protractor": "~5.1.0",
     "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
