--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "typescript": "~2.2.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-manifest-plugin": "^1.1.0"
   }
