--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "webdriver-manager update",
     "start": "npm run build:prod && npm run server",
     "server": "NODE_ENV=production node server/server.js",
-    "build:prod": "BUILD=true NODE_ENV=production webpack -p --progress --colors --display-error-details",
+    "build:prod": "BUILD=true NODE_ENV=production webpack --progress --colors --display-error-details",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors",
     "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
@@ -32,9 +32,14 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^4.1.3",
+    "@ngtools/webpack": "^1.3.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.1",
+    "awesome-typescript-loader": "^3.1.3",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "codelyzer": "~2.0.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -63,7 +68,6 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.16.1",
-    "ts-loader": "^2.1.0",
     "ts-node": "~2.0.0",
     "tslint": "^4.5.1",
     "tslint-loader": "^3.5.3",
