--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.1.3",
+    "@angularclass/hmr-loader": "^3.0.2",
     "@ngtools/webpack": "^1.3.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "@types/systemjs": "^0.20.2",
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
