--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@ngtools/webpack": "^1.3.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "@types/systemjs": "^0.20.2",
+    "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
