--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "author": "Dražen Buljovčić <drazen.buljovcic@gmail.com>",
   "private": true,
   "scripts": {
-    "postinstall": "webdriver-manager update",
     "start": "npm run build:prod && npm run server",
     "server": "NODE_ENV=production node server/server.js",
+    "ngc": "ngc -p tsconfig.aot.json",
     "build:prod": "BUILD=true NODE_ENV=production webpack --progress --colors --display-error-details",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors",
     "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
     "test": "NODE_ENV=testing_unit karma start",
+    "pree2e": "webdriver-manager update",
     "e2e": "NODE_ENV=testing_e2e protractor"
   },
   "dependencies": {
