--- a/package.json
+++ b/package.json
@@ -23,25 +23,6 @@
     "compression": "^1.6.2"
   },
   "devDependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.1.3",
-    "@angular/router": "^4.0.0",
-    "compression": "^1.6.2",
-    "core-js": "^2.4.1",
-    "express": "^4.15.3",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
     "@angular/compiler-cli": "^4.1.3",
     "@ngtools/webpack": "^1.3.3",
     "@types/jasmine": "2.5.38",
@@ -81,6 +62,7 @@
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.1.0",
     "sass-loader": "^6.0.5",
+    "style-ext-html-webpack-plugin": "^3.4.1",
     "style-loader": "^0.16.1",
     "ts-node": "~2.0.0",
     "tslint": "^4.5.1",
