--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -18,6 +18,8 @@
     "**/*.d.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "app/src/main.aot.ts",
+    "server/server.aot.ts",
   ]
 }
