--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Dražen Buljovčić <drazen.buljovcic@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "npm run build:server && npm run server",
+    "clean": "rm -rf dist/",
+    "start": "npm run build:prod && npm run build:server && npm run server",
+    "start:no-ssr": "npm run build:prod && npm run build:server && npm run server:no-ssr",
+    "server:no-ssr": "NODE_ENV=production node server/server.js",
     "server": "NODE_ENV=production node dist/server.js",
     "ngc:app": "ngc -p tsconfig.aot.json",
     "ngc:server": "ngc -p tsconfig.uni.json",
     "build:server": "BUILD=true NODE_ENV=universal webpack --progress --colors --display-error-details",
-    "build:prod": "BUILD=true NODE_ENV=production webpack --progress --colors --display-error-details",
+    "build:prod": "npm run clean && BUILD=true NODE_ENV=production webpack --progress --colors --display-error-details",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors",
     "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
