--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "npm run build:prod && npm run server",
     "server": "NODE_ENV=production node server/server.js",
-    "build:prod": "BUILD=true NODE_ENV=production webpack --progress --colors --display-error-details",
-    "dev": "NODE_ENV=development webpack-dev-server --progress --colors",
-    "build:dev": "BUILD=true NODE_ENV=development webpack --progress --colors --display-error-details",
+    "build:prod": "BUILD=true NODE_ENV=production webpack --config webpack.prod.js --progress --colors --display-error-details",
+    "dev": "NODE_ENV=development webpack-dev-server --progress --colors --config webpack.dev.js",
+    "build:dev": "BUILD=true NODE_ENV=development webpack --config webpack.dev.js --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
     "test": "NODE_ENV=testing_unit karma start",
     "pree2e": "webdriver-manager update",
@@ -41,7 +41,6 @@
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.16",
     "codelyzer": "~2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.2",
@@ -77,6 +76,7 @@
     "webpack": "^2.6.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.4.5",
-    "webpack-manifest-plugin": "^1.1.0"
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-merge": "^4.1.0"
   }
 }
