--- a/webpack-manifest.json
+++ b/webpack-manifest.json
@@ -1,10 +1,10 @@
 {
-  "/app.css": "/css/app.1947a8.css",
-  "/app.css.map": "/css/app.1947a8.css.map",
-  "/app.js": "/js/app.1947a8.js",
+  "/app.css": "/css/app.6ca6c0.css",
+  "/app.css.map": "/css/app.6ca6c0.css.map",
+  "/app.js": "/js/app.6ca6c0.js",
   "/images/angular.png": "/images/angular9af10e.png",
-  "/js/0.1947a8.js": "/js/0.1947a8.js",
-  "/js/1.1947a8.js": "/js/1.1947a8.js",
-  "/manifest.js": "/js/manifest.1947a8.js",
-  "/vendor.js": "/js/vendor.1947a8.js"
+  "/js/0.6ca6c0.js": "/js/0.6ca6c0.js",
+  "/js/1.6ca6c0.js": "/js/1.6ca6c0.js",
+  "/manifest.js": "/js/manifest.6ca6c0.js",
+  "/vendor.js": "/js/vendor.6ca6c0.js"
 }
