--- a/webpack-manifest.json
+++ b/webpack-manifest.json
@@ -1,10 +1,10 @@
 {
-  "/app.css": "/css/app.6ca6c0.css",
-  "/app.css.map": "/css/app.6ca6c0.css.map",
-  "/app.js": "/js/app.6ca6c0.js",
+  "/app.css": "/css/app.707574.css",
+  "/app.css.map": "/css/app.707574.css.map",
+  "/app.js": "/js/app.707574.js",
   "/images/angular.png": "/images/angular9af10e.png",
-  "/js/0.6ca6c0.js": "/js/0.6ca6c0.js",
-  "/js/1.6ca6c0.js": "/js/1.6ca6c0.js",
-  "/manifest.js": "/js/manifest.6ca6c0.js",
-  "/vendor.js": "/js/vendor.6ca6c0.js"
+  "/js/0.707574.js": "/js/0.707574.js",
+  "/js/1.707574.js": "/js/1.707574.js",
+  "/manifest.js": "/js/manifest.707574.js",
+  "/vendor.js": "/js/vendor.707574.js"
 }
