--- a/webpack-manifest.json
+++ b/webpack-manifest.json
@@ -1,10 +1,10 @@
 {
-  "/app.css": "/css/app.707574.css",
-  "/app.css.map": "/css/app.707574.css.map",
-  "/app.js": "/js/app.707574.js",
-  "/images/angular.png": "/images/angular9af10e.png",
-  "/js/0.707574.js": "/js/0.707574.js",
-  "/js/1.707574.js": "/js/1.707574.js",
-  "/manifest.js": "/js/manifest.707574.js",
-  "/vendor.js": "/js/vendor.707574.js"
+  "app.css": "css/app.daa93c.css",
+  "app.css.map": "css/app.daa93c.css.map",
+  "app.js": "js/app.daa93c.js",
+  "images/angular.png": "images/angular9af10e.png",
+  "js/0.daa93c.js": "js/0.daa93c.js",
+  "js/1.daa93c.js": "js/1.daa93c.js",
+  "manifest.js": "js/manifest.daa93c.js",
+  "vendor.js": "js/vendor.daa93c.js"
 }
