--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Dražen Buljovčić <drazen.buljovcic@gmail.com>",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build:prod",
+    "deploy": "gh-pages -d dist/",
     "start": "npm run build:prod && npm run server",
     "server": "NODE_ENV=production node server/server.js",
     "build:prod": "BUILD=true NODE_ENV=production webpack --config webpack.prod.js --progress --colors --display-error-details",
@@ -47,6 +49,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "gh-pages": "^1.0.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
