--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Dražen Buljovčić <drazen.buljovcic@gmail.com>",
   "private": true,
   "scripts": {
+    "clean": "rm -rf dist/",
     "predeploy": "npm run build:prod",
     "deploy": "gh-pages -d dist/",
     "start": "npm run build:prod && npm run server",
     "server": "NODE_ENV=production node server/server.js",
+    "prebuild:prod": "npm run clean",
     "build:prod": "BUILD=true NODE_ENV=production webpack --config webpack.prod.js --progress --colors --display-error-details",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors --config webpack.dev.js",
+    "prebuild:dev": "npm run clean",
     "build:dev": "BUILD=true NODE_ENV=development webpack --config webpack.dev.js --progress --colors --display-error-details",
     "lint": "tslint 'app/**/*.ts' --config tslint.json",
     "test": "NODE_ENV=testing_unit karma start",
