--- a/webpack-manifest.json
+++ b/webpack-manifest.json
@@ -1,10 +1,10 @@
 {
-  "app.css": "css/app.39a763.css",
-  "app.css.map": "css/app.39a763.css.map",
-  "app.js": "js/app.39a763.js",
+  "app.css": "css/app.71523b.css",
+  "app.css.map": "css/app.71523b.css.map",
+  "app.js": "js/app.71523b.js",
   "images/angular.png": "images/angular9af10e.png",
-  "js/0.39a763.js": "js/0.39a763.js",
-  "js/1.39a763.js": "js/1.39a763.js",
-  "manifest.js": "js/manifest.39a763.js",
-  "vendor.js": "js/vendor.39a763.js"
+  "js/0.71523b.js": "js/0.71523b.js",
+  "js/1.71523b.js": "js/1.71523b.js",
+  "manifest.js": "js/manifest.71523b.js",
+  "vendor.js": "js/vendor.71523b.js"
 }
